--- a/k8s-kubeadm/Vagrantfile
+++ b/k8s-kubeadm/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure("2") do |config|
         master.vm.network "private_network", ip: "192.168.57.10"
         master.vm.hostname = "k8s-master"
         master.vm.provision "ansible" do |ansible|
-            ansible.playbook = "kubernetes-setup/master-playbook.yaml"
+            ansible.playbook = "master-playbook.yaml"
             ansible.extra_vars = {
                 node_ip: "192.168.57.10",
             }
@@ -28,7 +28,7 @@ Vagrant.configure("2") do |config|
             node.vm.network "private_network", ip: "192.168.57.#{i + 10}"
             node.vm.hostname = "node-#{i}"
             node.vm.provision "ansible" do |ansible|
-                ansible.playbook = "kubernetes-setup/node-playbook.yml"
+                ansible.playbook = "node-playbook.yml"
                 ansible.extra_vars = {
                     node_ip: "192.168.57.#{i + 10}",
                 }
